2012-09-23  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Fix segfault caused by "remove_picture" configuration
	  protocol with no argument.

	* c_imagelib.c: memcpy -> memmove.

	* xlib/x_imagelib.c, mlimgloader/main.c: Fix memory leaks.

	* x_selection.[ch], x_screen.c:
	  x_sel_lock() is added to fix the problem of reverting
	  back to selecting one character at a time by dragging
	  the pointer after double- or triple-clicking.

2012-09-17  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c, ml_vt100_parser.c: ~/.mlterm/picture.six is changed to
	  ~/.mlterm/[pty name].six.

	* x_imagelib.c, mlimgloader/main.c, x_screen.c: Image files on remote
	  hosts are available for the wall picture via network protocols
	  supported by GVfs.

2012-09-15  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Freeze in scrolling by CSI r is fixed. (Thanks to koie san)

	* dexport.map: http://ideone.com/N9xUw is merged.

	* ml_vt100_parser.c: Minor fixes around parsing sixel graphics sequence.

2012-09-13  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Continuous DCS/FF/GS/RS/US sequences are saved
	  in one file (~/.mlterm/picture.six).

	* c_imagelib.c: Continuous DCS sequences (ESC P ... ESC \) for sixel
	  graphics are processed.

2012-09-08  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c: gdk_pixbuf of ~/.mlterm/picture.six is not cached.

2012-09-06  Araki Ken  <arakiken@users.sf.net>

	* android/Android.mk -> android/jni/Android.mk
	  android/kik_config.h -> android/jni/kiklib/src/kik_config.h

	* android/build.sh, android/build.xml, android/AndroidManifest.xml,
	  android/res/values/strings.xml, android/src/mlterm/android/MLTerm.java:
	  Added.

2012-09-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Minor fixes.

	* c_imagelib.c: malloc() is used for picture file data instead of alloca().

2012-09-04  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  Application-cursor-keys sequences for Home and End keys are