@@ -91,16 +91,18 @@ kik_get_user_rc_path(
 	/* Enough for "%s/.config/%s" */
 	if( ( dotrcpath = malloc( strlen( homedir) + 9 + strlen( rcfile) + 1)))
 	{
-		struct stat  st ;
 		char *  p ;
 
 		sprintf( dotrcpath , "%s/.config/%s" , homedir , rcfile) ;
 
 		if( ( p = kik_str_alloca_dup( dotrcpath)))
 		{
+			struct stat  st ;
+
 			*(strrchr( p , '/')) = '\0' ;	/* always succeeds. */
 			if( stat( p , &st) == 0)
 			{
+				/* ~/.config/mlterm exists. */
 				goto  end ;
 			}
 		}
