@@ -99,10 +99,13 @@ load_file(
 	#if GDK_PIXBUF_MINOR >= 14
 		if( strstr( path , "://"))
 		{
+			GFile *  file ;
 			GFileInputStream *  in ;
 
-			if( ( in = g_file_read( g_vfs_get_file_for_uri(
-					g_vfs_get_default() , path) , NULL , NULL)))
+			if( ( in = g_file_read(
+					( file = g_vfs_get_file_for_uri(
+							g_vfs_get_default() , path)) ,
+					NULL , NULL)))
 			{
 				pixbuf_tmp = gdk_pixbuf_new_from_stream(
 						(GInputStream*)in , NULL , NULL) ;
